# anisotropic-geodesic-loops

./: .gitignore  CLAUDE.md  README.md  implementation.md  paper_draft.md
examples/: demo.py
geodesic_loops/: .gitignore  Cargo.toml  pyproject.toml
geodesic_loops/src/: flip_geodesics.rs  geodesic.rs  lib.rs  mesh.rs  python_bindings.rs  tests.rs
