[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "geodesic-loops"
version = "0.1.0"
description = "Geodesic paths and loops on triangulated meshes (Rust + Python)"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy"]

[tool.maturin]
features = ["python"]
module-name = "geodesic_loops"
